--- a/Scatter Plot.qmd
+++ b/Scatter Plot.qmd
@@ -2,17 +2,83 @@
 title: "Scatter Plot"
 author: "Jaxson Freund"
 format: html
-editor: visual
+editor: source
 ---
 
-```{r}
-# Create data
-data = data.frame(
-  x=seq(1:100) + 0.1*seq(1:100)*sample(c(1:10) , 100 , replace=T),
-  y=seq(1:100) + 0.2*seq(1:100)*sample(c(1:10) , 100 , replace=T)
-)
+## Context
+From January 1-15, 2024, I visited Costa Rica as a class trip. I conducted an observational study on foraging behavior of leafcutter ants.  My goal is to assess qualities of leaves that are rejected far from the colony, vs. leaves that are carried all the way to the colony entrance and rejected at the doorstep.
 
-# Basic scatterplot
-plot(x=data$x, y=data$y)
+## Data
+```{r}
+# vector x (distance from main colony entrance)
+x <- c(0, 6, 12, 18, 3, 9, 15, 21, 1, 7, 13, 19, -2, 4, 10, 16, 22)
+
+# vector y (leaf pass in quadrat)
+y <- c(4, 1, 0.5, 0.2, 2.5, 0.5, 0.3, 0.2, 3.9, 0.6, 2.1, 0.3, 0.7, 1.2, 1.4, 0.9, 0.4)
+
+# vector z (leaf count in quadrat)
+z <- c(124, 43, 21,  9, 118, 22, 9, 7, 137, 46, 95, 15, 36, 76, 88, 44,  21)
+
 ```
 
+## Sort based on X
+```{r}
+#create a data  frame
+data <- data.frame(x = x, y = y, z = z)
+
+# Use order to get the indices that would sort the data frame by x
+order_indices <- order(data$x)
+
+# Use the indices to reorder the data frame
+sorted_data <- data[order_indices, ]
+```
+## Display the sorted data
+```{R}
+# Display the sorted data frame
+print(sorted_data)
+```
+## Format the table
+```{R}
+#change row headers
+colnames(sorted_data) <-
+c("Distance (m)", "Leaf Mass (g)", "Leaf Count")
+#remove indices on the left side
+print(sorted_data, row.names = FALSE)
+
+```
+
+## Plot Leaf Count vs. Distance
+```{R}
+plot(x, y, main = "Leaf Mass vs. Distance from Main Colony Entrance", xlab = "Distance (m)", ylab = "Leaf Mass (g)", col = "blue", pch = 16)
+
+#Add an exponential line of best fit
+fit <- lm(log(y) ~ x)
+
+# Generate predicted values for the exponential fit
+x_pred <- seq(min(x), max(x), length.out = 100)
+y_pred <- exp(predict(fit, newdata = data.frame(x = x_pred)))
+
+# Add the exponential line to the plot
+lines(x_pred, y_pred, col = "blue", type = "l")
+
+#add the equation of best fit
+# Extract coefficients and transform back from log scale
+a <- exp(coef(fit)[1])
+b <- coef(fit)[2]
+
+# Print the equation on the plot
+eq <- sprintf("y = %.2f * exp(%.2fx)", a, b)
+text(3, max(y), eq, pos = 4, col = "black", cex = 0.8)
+```
+## Plot Leaf Count vs. Distance
+```{R}
+plot(x, z, main = "Leaf Count vs. Distance from Main Colony Entrance", xlab = "Distance (m)", ylab = "Leaf Count", col = "red", pch = 16)
+fit <- lm(log(z) ~ x)
+x_pred <- seq(min(x), max(x), length.out = 100)
+z_pred <- exp(predict(fit, newdata = data.frame(x = x_pred)))
+lines(x_pred, z_pred, col = "red", type = "l")
+a <- exp(coef(fit)[1])
+b <- coef(fit)[2]
+eq <- sprintf("z = %.2f * exp(%.2fx)", a, b)
+text(3, max(z), eq, pos = 4, col = "black", cex = 0.8)
+```
