--- a/code_challenge/interactive_testing.qmd
+++ b/code_challenge/interactive_testing.qmd
@@ -3,8 +3,8 @@ title: "Interactive Tests"
 format: html
 editor: source
 ---
+
 ```{R}
-install.packages("shiny")
 library(shiny)
 ```
 
@@ -14,13 +14,12 @@ options(repos = c(CRAN = "https://cloud.r-project.org"))
 
 # Create an example dataframe with row names
 df <- data.frame(
-  Name = c("Alice", "Bob", "Charlie", "David"),
   Age = c(25, 30, 35, 40),
   Gender = c("Female", "Male", "Male", "Male")
 )
 
 # Assign row names to the dataframe
-rownames(df) <- c("Row1", "Row2", "Row3", "Row4")
+rownames(df) <- c("Alice", "Bob", "Charlie", "David")
 
 # Print the dataframe
 print(df)
@@ -28,9 +27,9 @@ print(df)
 
 # Define UI
 ui <- fluidPage(
-  titlePanel("Check/Uncheck Rows"),
+  titlePanel("Select People"),
   fluidRow(
-    column(6, checkboxGroupInput("checkGroup", "Check Rows", choices = rownames(df)))
+    column(6, checkboxGroupInput("checkGroup", "Name", choices = rownames(df)))
   ),
   fluidRow(
     column(12, tableOutput("checkedTable"))
