--- a/code_challenge/final_code.qmd
+++ b/code_challenge/final_code.qmd
@@ -15,6 +15,20 @@ library(knitr)
 library(kableExtra)
 ```
 
+## Randy's comments
+
+* Nice!
+* I am not sure it is necessary to convert input data to dataframe-double check this by exploring the inputs after you load
+* with this challenge typing out specific code like you did for the unlist was not a big deal, but could be with other datasets.  Consider using a loop or a function in the future, or a different approach altogether.  I did not test, but I also think this would work and be more concise:
+
+past_percentages <- unname(unlist(past_df[c(1, 3, 2), ]))
+
+* did you print just to explore?
+* As I read your code I love it.  I am noticing that your method is fairly manual, e.g., finding the value for each ecosystem, and think this probably gave you a chance to really learn what is going on.  In the future I would encourage you to think through how to do this with fewer manual steps
+* increadible notes and reflections.
+
+** Well done Jaxson!
+
 ## Past Data
 
 ```{R, echo = FALSE, include = FALSE}
